--- a/src/index.pug
+++ b/src/index.pug
@@ -49,6 +49,8 @@ html(lang="en")
                                 a(href="#!").intro__btn Смотреть все курсы по программированию 
                 include components/direction 
                 +direction
+                include components/lessons 
+                +lessons
             include components/footer 
             +footer
         script(src="js/app.min.js") 
