--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,11 +33,9 @@
     'layout/who',
     'layout/intro',
     'layout/qa',
-<<<<<<< HEAD
     'layout/direction',
-=======
     'layout/contacts',
->>>>>>> 23ad57ae72373a9044eb07bb657efeca5767ff4c
+    'layout/lessons',
     'layout/forms';
 
 // components
