--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -16,6 +16,9 @@ body{
 }
 body{
     background: #F4F4F4;
+    &.hidden{
+        overflow: hidden;
+    }
 }
 .wrapper{
     min-height: 100%;
@@ -98,12 +101,14 @@ a{
     &__container{
         display: flex;
         flex: 1 1 auto;
+        width: 100%;
     }
     &__inner{
         flex: 1 1 auto;
         background: #FFFFFF;
         border: 2px solid #000000;
         border-radius: 40px;
+        width: 100%;
     }
 }
 .title{
