--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -4,9 +4,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 50px 60px 37px;
+        padding: 30px 50px 60px 37px;
         @include media(1375){
-            padding: 0 0 30px 60px;
+            padding: 30px 0 30px 60px;
         }
         @include media(1024){
             padding: 15px 0 50px 35px;
@@ -173,6 +173,8 @@
     }
     &__img{
         transform: rotate(8.25deg);
+        animation: rotate 1s infinite alternate linear;
+        transform-origin: bottom;
         @include media(1375){
             max-width: 472px;
             width: 100%;
@@ -497,5 +499,17 @@
             background: #EEE6F5;
             color: #141E2D;
         }  
+    }
+}
+
+@keyframes rotate {
+    0%{
+        transform: rotate(8.25deg);
+    }
+    100%{
+        transform: rotate(-8.25deg);
+        @include media(576){
+            transform: rotate(0deg);
+        }
     }
 }
