end lessons block

--- a/src/scss/layout/_lessons.scss
+++ b/src/scss/layout/_lessons.scss
@@ -171,6 +171,15 @@
     @include media(1024){
         padding: 0 40px 33px 39px;
     }
+    @include media(768){
+        padding: 0 22px 35px 22px;
+    }
+    @include media(575){
+        padding-bottom: 30px;
+    }
+    @include media(425){
+        padding: 0 22px 20px 22px;
+    }
     &__title{
         font-weight: 600;
         font-size: 47px;
@@ -192,6 +201,10 @@
             font-size: 27px;
             line-height: 100%;
         }
+        @include media(575){
+            font-size: 20px;
+            line-height: 100%;
+        }
     }
     &__content{
         display: flex;
@@ -202,23 +215,9 @@
         @include media(1375){
             column-gap: 15px;
         }
-        &::before{
-            content: '';
-            position: absolute;
-            height: 100%;
-            width: 242px;
-            right: 0;
-            background: linear-gradient(269.03deg, #BFFDF2 23.07%, rgba(255, 255, 255, 0) 98.9%);
-            @include media(1024){
-                width: 130px;
-            }
-        }
     }
     &__item{
         width: calc(50% - 17.5px);
-        display: flex;
-        flex-direction: column;
-        row-gap: 15px;
         @include media(1375){
             width: calc(50% - 7.5px);
         }
@@ -231,6 +230,76 @@
         @include media(1375){
             font-size: 22px;
             line-height: 100%;
+        }
+        @include media(768){
+            font-size: 19px;
+            line-height: 100%;
+            max-width: 350px;
+            width: 100%;
+        }
+        @include media(575){
+            max-width: 100%;
+        }
+        @include media(425){
+            font-size: 15px;
+            line-height: 100%;
+            max-width: 255px;
+        }
+    }
+    &__slider{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            height: 100%;
+            width: 242px;
+            right: 0;
+            z-index: 1;
+            background: linear-gradient(269.03deg, #BFFDF2 23.07%, rgba(255, 255, 255, 0) 98.9%);
+            @include media(1024){
+                width: 130px;
+            }
+            @include media(575){
+                width: 82px;
+                background: linear-gradient(269.03deg, #BFFDF2 23.07%, rgba(255, 255, 255, 0) 98.9%);
+            }
+        }
+    }
+    .swiper{
+        width: 100%;
+        overflow: hidden;
+        &-wrapper{
+            display: flex;
+            width: max-content;
+        }
+    }
+    &__img{
+        width: 100%;
+        position: relative;
+        padding-bottom: 52.56%;
+        margin-bottom: 15px;
+        @include media(1375){
+            margin-bottom: 10px;
+        }
+        @include media(768){
+            max-width: 350px;
+        }
+        @include media(575){
+            max-width: 100%;
+        }
+        @include media(425){
+            max-width: 255px;
+        }
+        img{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            border-radius: 40px;
+            @include media(575){
+                border-radius: 20px;
+            }
         }
     }
 }
