--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -321,6 +321,7 @@ a{
     }
 }
 .course{
+    margin-bottom: 10px;
     &__inner{
         padding: 50px;
         display: flex;
@@ -456,6 +457,118 @@ a{
         @include media(576){
             font-size: 15px;
             padding: 10px 20px;
+        }
+    }
+}
+.for{
+    &__inner{
+        padding: 50px;
+        position: relative;
+        @include media(1376){
+            padding: 50px 43px;
+        }
+        @include media(768){
+            padding: 40px 25px;
+        }
+        @include media(576){
+            padding: 35px 25px;
+        }
+        @include media(425){
+            padding: 30px 25px;
+        }
+        @include media(375){
+            padding: 20px 22px;
+        }
+    }
+    &__img{
+        position: absolute;
+        top: 50px;
+        right: 50px;
+        @include media(1376){
+            right: 43px;
+            width: 130px;
+            height: 130px;
+        }
+        @include media(768){
+            top: 40px;
+            right: 25px;
+            width: 110px;
+            height: 110px;
+        }
+        @include media(576){
+            top: 35px;
+            right: 25px;
+            width: 80px;
+            height: 80px;
+        }
+        @include media(425){
+            top: 30px;
+        }
+        @include media(375){
+            top: 20px;
+            right: 22px;
+        }
+        img{
+            width: 100%;
+        }
+    }
+    &__item{
+        &.first{
+            margin-bottom: 70px;
+            @include media(1376){
+                width: calc(100% - 140px);
+            }
+            @include media(768){
+                width: calc(100% - 120px);
+                margin-bottom: 25px;
+            }
+            @include media(576){
+                width: calc(100% - 90px);
+                margin-bottom: 20px;
+            }
+        }
+        &:not(:last-of-type){
+            margin-bottom: 44px;
+            @include media(768){
+                margin-bottom: 25px;
+            }
+            @include media(576){
+                margin-bottom: 20px;
+            }
+        }
+    }
+    &__title{
+        font-weight: 600;
+        font-size: 33px;
+        line-height: 100%;
+        color: #000000;
+        margin-bottom: 20px;
+        @include media(1376){
+            font-size: 24px;
+        }
+        @include media(768){
+            font-size: 20px;
+        }
+        @include media(576){
+            margin-bottom: 15px;
+        }
+    }
+    &__p{
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 100%;
+        color: #000000;
+        @include media(1376){
+            font-size: 22px;
+        }
+        @include media(768){
+            font-size: 19px;
+        }
+        @include media(576){
+            font-size: 16px;
+        }
+        @include media(425){
+            font-size: 15px;
         }
     }
 }
