--- a/src/scss/layout/_direction.scss
+++ b/src/scss/layout/_direction.scss
@@ -536,6 +536,7 @@
             max-width: 265px;
             width: 100%;
             padding: 20px 25px;
+            border-radius: 20px;
         }
         &:nth-of-type(2){
             .practice__text{
