--- a/src/course.pug
+++ b/src/course.pug
@@ -16,6 +16,8 @@ html(lang="en")
                 +course
                 include components/for 
                 +for
+                include components/how 
+                +how
             include components/footer 
             +footer
         script(src="js/app.min.js") 
