--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -32,7 +32,7 @@ mixin header(link)
                             a(href="#!").header__link.active Курсы
                     else 
                         li.header__li 
-                            a(href="#!").header__link Курсы
+                            a(href="courses.html").header__link Курсы
                     if link === 'faq'
                         li.header__li 
                             a(href="#!").header__link.active FAQ
@@ -55,7 +55,7 @@ mixin header(link)
                 li.header__menu-li 
                     a(href="about.html").header__menu-link Кто мы
                 li.header__menu-li 
-                    a(href="#!").header__menu-link Курсы
+                    a(href="courses.html").header__menu-link Курсы
                 li.header__menu-li 
                     a(href="contacts.html").header__menu-link Контакты
                 li.header__menu-li 
