--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -647,3 +647,187 @@ a{
         }
     }
 }
+.carousel{
+    &.last{
+        .carousel__inner{
+            padding-bottom: 50px;
+        }
+    }
+    &__inner{
+        padding: 50px 30px 0 30px;
+        @include media(992){
+            padding-top: 40px;
+        }
+        @include media(768){
+            padding-top: 35px;
+            padding-left: 0;
+            padding-right: 0;
+        }
+        @include media(576){
+            padding-top: 20px;
+        }
+    }
+    &__title{
+        font-weight: 600;
+        font-size: 47px;
+        line-height: 100%;
+        margin-bottom: 27px;
+        color: #141E2D;
+        @include media(1400){
+            font-size: 34px;
+            margin-bottom: 17px;
+        }
+        @include media(992){
+            font-size: 30px;
+            margin-bottom: 20px;
+        }
+        @include media(768){
+            font-size: 27px;
+            margin-bottom: 12px;
+        }
+        @include media(576){
+            font-size: 20px;
+        }
+        span{
+            position: relative;
+            isolation: isolate;
+            display: inline-block;
+            &::before{
+                content: "";
+                position: absolute;
+                background: url(../img/text-overlay.svg) center/cover no-repeat;
+                background-size: 100% auto;
+                width: 100%;
+                height: 50px;
+                left: 50%;
+                -webkit-transform: translateX(-50%);
+                -ms-transform: translateX(-50%);
+                transform: translateX(-50%);
+                right: 0;
+                bottom: -8px;
+                z-index: -1;
+                @include media(1024){
+                    width: 100%;
+                    height: 42px;
+                }
+                @include media(767){
+                    width: 100%;
+                    height: 30px;
+                    bottom: -5px;   
+                }
+                @include media(576){
+                    height: 40px;
+                    bottom: -10px;
+                }
+            }
+        }
+    }
+    &__content{
+        width: 100%;
+    }
+    &__swiper{
+        overflow: hidden;
+        width: 100%;
+    }
+    &__wrapper{
+        display: flex;
+        width: max-content;
+    }
+    &__item{
+        position: relative;
+        width: 505px;
+        display: flex;
+        flex-direction: column;
+        background: #FFFFFF;
+        border: 2px solid #000000;
+        border-radius: 40px;
+        padding: 35px;
+        @include media(1400){
+            width: 390px;
+        }
+        @include media(992){
+            padding: 25px;
+            width: 365px;
+        }
+        @include media(768){
+            width: 311px;
+        }
+        @include media(576){
+            padding: 20px;
+        }
+        @include media(425){
+            width: 285px;
+        }
+        &-header{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
+            margin-bottom: 15px;
+        }
+        &-title{
+            font-weight: 600;
+            font-size: 33px;
+            line-height: 100%;
+            color: #141E2D;
+            width: calc(100% - 110px);
+            @include media(1375){
+                font-size: 24px;
+            }
+            @include media(768){
+                font-size: 20px;
+            }
+            @include media(576){
+                font-size: 18px;
+            }
+        }
+        &-p{
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 100%;
+            color: #000000;
+            margin-bottom: 45px;
+            @include media(1400){
+                font-size: 22px;
+            }
+            @include media(992){
+                margin-bottom: 30px;
+            }
+            @include media(768){
+                font-size: 19px;
+            }
+            @include media(576){
+                font-size: 16px;
+            }
+            @include media(425){
+                font-size: 15px;
+            }
+        }
+    }
+    &__img{
+        width: 100px;
+        height: 100px;
+        @include media(1375){
+            width: 90px;
+            height: 90px;
+        }
+        @include media(768){
+            width: 53px;
+            height: 53px;
+        }
+        img{
+            height: 100%;
+        }
+    }
+    &__bot{
+        flex: 1 1 auto;
+        display: flex;
+        align-items: flex-end;
+    }
+    &__btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+}
