--- a/src/index.pug
+++ b/src/index.pug
@@ -51,6 +51,8 @@ html(lang="en")
                 +direction
                 include components/lessons 
                 +lessons
+                include components/sign 
+                +sign
             include components/footer 
             +footer
         script(src="js/app.min.js") 
