--- a/src/scss/layout/_direction.scss
+++ b/src/scss/layout/_direction.scss
@@ -395,6 +395,9 @@
             @include media(768){
                 display: block !important;
             }
+            @include media(575){
+                display: none !important;
+            }
         }
         &::before{
             content: '';
