--- a/src/components/sign.pug
+++ b/src/components/sign.pug
@@ -5,7 +5,7 @@ mixin sign()
                 h2.sign__title Запишитесь на бесплатный пробный урок!
                 p.sign__desc Обсудим планы и цели ребенка. Вы ничего не теряете!
                 form(action="").sign__form
-                    div(style="width: 510px;").custom-select
+                    .custom-select
                         select
                             option(value="0").sign__option Выберете курс 
                             option(value="1").sign__option Хочу проконсультироваться по этому вопросу
@@ -19,6 +19,6 @@ mixin sign()
                     input(type="email" placeholder="Почта" required).sign__input
                     input(type="text" placeholder="+7 (___) ___-__-__" required).sign__input
                     button(type="submit").sign__btn Оставить заявку
-                    span.sign__span Оставляя заявку, вы принимаете оферту, условия договора на оказание услуг и политики обработки пресональных данных.
+                .sign__span Оставляя заявку, вы принимаете оферту, условия договора на оказание услуг и политики обработки пресональных данных.
             .sign__img 
                 img(src="@img/rocket.svg", alt="" draggable="false")
