--- a/src/scss/layout/_sign.scss
+++ b/src/scss/layout/_sign.scss
@@ -3,6 +3,15 @@
     @include media(1375){
         padding: 60px 0 60px 0;
     }
+    @include media(1024){
+        padding: 75px 0;
+    }
+    @include media(768){
+        padding: 70px 0;
+    }
+    @include media(425){
+        padding: 45px 0;
+    }
     &__body{
         display: flex;
         justify-content: center;
@@ -11,12 +20,30 @@
         @include media(1375){
             column-gap: 0;
         }
+        @include media(1024){
+            column-gap: 6px;
+        }
+        @include media(768){
+            column-gap: 28px;
+        }
+        @include media(575){
+            column-gap: 10px;
+        }
+        @include media(425){
+            align-items: flex-end;
+        }
     }
     &__left{
         max-width: 510px;
         width: 100%;
         @include media(1375){
             max-width: 484px;
+        }
+        @include media(1024){
+            max-width: 390px;
+        }
+        @include media(575){
+            max-width: 290px;
         }
     }
     &__title{
@@ -27,6 +54,23 @@
         line-height: 100%;
         color: #000000;
         margin-bottom: 25px;
+        @include media(1375){
+            font-size: 54px;
+            line-height: 100%;
+            margin-bottom: 15px;
+        }
+        @include media(1024){
+            font-size: 46px;
+            line-height: 100%;
+        }
+        @include media(768){
+            font-size: 36px;
+            line-height: 100%;
+        }
+        @include media(575){
+            font-size: 24px;
+            line-height: 100%;
+        }
     }
     &__desc{
         font-weight: 400;
@@ -34,10 +78,26 @@
         line-height: 100%;
         color: #000000;
         margin-bottom: 35px;
+        @include media(1375){
+            font-size: 22px;
+            line-height: 100%;
+            margin-bottom: 20px;
+        }
+        @include media(768){
+            font-size: 18px;
+        }
+        @include media(575){
+            font-size: 16px;
+            line-height: 100%;
+        }
     }
     .custom-select {
         position: relative;
         margin-bottom: 10px;
+        @include media(1375){
+            width: 100%;
+            margin-bottom: 8px;
+        }
     }
     .custom-select select {
         display: none;
@@ -56,6 +116,9 @@
         right: 30px;
         z-index: 2;
         transition: 300ms ease;
+        @include media(1375){
+            right: 18px;
+        }
     }
     .select-selected.select-arrow-active:after {
         transform: translateY(-50%) rotate(180deg);
@@ -66,7 +129,6 @@
         line-height: 100%;
         color: #141E2D;
         padding: 21px 24px;
-        height: 60px;
         cursor: pointer;
         background: #FFFFFF;
         border: 2px solid #141E2D;
@@ -74,14 +136,20 @@
         z-index: 100;
         position: relative;
         transition: 300ms ease; 
+        @include media(1375){
+            border: 1px solid #141E2D;
+            font-size: 14px;
+            line-height: 100%;
+            padding: 11px 32px 11px 18px;
+        }
     }
     .select-items div{
         background: none;
-        border: none;
+        border: none !important;
         padding: 10px 15px;
         transition: 300ms ease;
         border-radius: 0;
-        height: max-content;
+        height: max-content !important;
         &:hover{
             background: #EEE6F5 !important;
             font-weight: 600;
@@ -108,6 +176,10 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
+        @include media(1375){
+            max-width: 383px;
+            width: 100%;
+        }
     }
     &__input{
         font-weight: 400;
@@ -119,11 +191,27 @@
         border-radius: 40px;
         margin-bottom: 10px;
         height: 60px;
+        @include media(1375){
+            width: 100%;
+            margin-bottom: 7px;
+            border: 1px solid #141E2D;
+            font-size: 14px;
+            line-height: 100%;
+            height: 39px;
+            padding: 12px 18px;
+        }
+        @include media(575){
+            height: 36px;
+        }
         &::placeholder{
             font-weight: 400;
             font-size: 18px;
             line-height: 100%;
             color: #646464;
+            @include media(1375){
+                font-size: 14px;
+                line-height: 100%;
+            }
         }
     }
     &__btn{
@@ -141,11 +229,57 @@
         border: 2px solid #141E2D;
         border-radius: 40px;
         margin-bottom: 10px;
+        @include media(1375){
+            margin-bottom: 7px;
+            border: 1px solid #141E2D;
+            height: 58px;
+            font-size: 22px;
+            line-height: 100%;
+        }
+        @include media(768){
+            height: 38px;
+            font-size: 18px;
+            line-height: 100%;
+        }
+        @include media(575){
+            height: 36px;
+            width: 151px;
+            font-size: 16px;
+            line-height: 100%;
+        }
     }
     &__span{
         font-weight: 400;
         font-size: 17px;
         line-height: 100%;
         color: #000000;
+        @include media(1375){
+            font-size: 15px;
+            line-height: 100%;
+        }
+        @include media(768){
+            font-size: 13px;
+        }
+    }
+    &__img{
+        @include media(1375){
+            max-width: 268px;
+            width: 100%;
+        }
+        @include media(1024){
+            max-width: 231px;
+        }
+        @include media(768){
+            max-width: 170px;
+        }
+        @include media(575){
+            max-width: 123px;
+        }
+        @include media(374){
+            display: none;
+        }
+        img{
+            width: 100%;
+        }
     }
 }
