--- a/src/components/direction.pug
+++ b/src/components/direction.pug
@@ -152,8 +152,8 @@ mixin direction()
                                                     img(src="@img/direction-img-3.svg", alt="")
                             .direction__right 
                                 p.direction__desc Какой ребенок не любит компьютерные игры? Мы предлагаем сделать этот процесс полезнее -- создавать и играть в свои игры. Увлекательно и точно понравится каждому!
-                                .direction__img 
-                                    img(src="@img/direction-img-4.png", alt="")
+                                .direction__img.gif
+                                    img(src="@img/roblox-course.gif", alt="" draggable="false")
                 .practice 
                     .practice__body 
                         h2.practice__title Как будет удобнее заниматься?
