--- a/src/courses.pug
+++ b/src/courses.pug
@@ -6,11 +6,11 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/style.min.css")
         link(rel="shortcut icon", href="img/favicon.png", type="image/x-icon")
-        title Страница Курса - Code It
+        title Курсы - Code It 
     body 
         .wrapper 
             include components/header 
-            +header('home') 
+            +header('courses') 
             main.main 
                 include components/carousel
                 +carousel-1
